# special_course_radar_imaging

./: .gitignore  main.py  pyproject.toml  ruff.toml
Odometry/: data_association.py  data_loading.py  descriptors.py  evaluation.py  keypoint_extraction.py  main.py  motion_estimation.py
map/: main.py  shore_detect.py  shoreline_registration.py
odometry/: README.md  ablation_study.py  data_association.py  descriptors.py  evaluation.py  gps_map.html  gps_map_CFEAR_k=12.html  gps_map_CFEAR_k=30.html  jobscript.sh  keypoint_extraction.py  main.py  main_odometry.py  motion_estimation.py
tests/: test_main_windowing.py  test_shore_detect.py  test_shoreline_registration.py
utils/: __init__.py  cfar.py  data_loading.py  visualisation.py
